--- a/css/common.css
+++ b/css/common.css
@@ -14,3 +14,36 @@
 .text-uppercase {
   text-transform: uppercase;
 }
+
+.col-4{
+  /*(4/12)*100*/
+  width: 33.333333%;
+  position: relative;
+  display: inline-block;
+}
+.img-responsive{
+  max-width: 100%;
+  width: 100%;
+}
+.col-4 .uno{
+  height: 45vh;
+}
+.container{
+  box-sizing: border-box;
+  padding-top: 40px;
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+}
+.row:before, .row:after{
+  content: "";
+  display: table;
+}
+.row:after{
+  clear: both;
+}
+[class*="col-"]{
+   min-height: 7px;
+   float: left;
+   padding: 12px;
+}
